# My-Anime-Sensei

./: .gitignore  README.md  index.py  pyproject.toml  tree.drawio
Docs/: API-Guide.md  help-for-devs.md
Src/: __init__.py
Src/Api/: model.py
Src/Api/settings/: __init__.py  configs.py  key.py
Src/Views/: __init__.py  front.py
